--- a/map, filter, reduce.html
+++ b/map, filter, reduce.html
@@ -17,7 +17,8 @@
 
             /****************************** 
             1. map
-            - 주어진 배열을 가지고 새로운 배열을 생성하는 함수(함수와 반목문을 통해 새로운 배열 생성).
+            - 주어진 배열을 가지고 새로운 배열을 생성하는 함수(조건문과 반목문을 통해 새로운 배열 생성).
+
             - 콜백함수의 파라미터로 전달된 각 배열 요소를 정의한 로직을 거쳐 반환한 값으로 새로운 배열을 생성하는 함수
             - 배열.map((params1, params2) => { }) 에서 params1은 배열에서 각 항목의 item, params2는 각 배열의 순번.
             ******************************/
@@ -49,8 +50,9 @@
 
             /****************************** 
             2. filter
-            - 주어진 배열에서 특정 조건을 만족하는 배열 요소만 뽑아 새로운 배열을 생성하는 함수(함수와 반목문을 통해 새로운 배열 생성).
-            - 콜백함수의 파라미터로 전달된 각 배열 요소를 정의한 로직을 거쳐 참인 결과 값만 모아 배열로 반환하는 함수.
+            - 반환값이 true이면 해당 요소를 유지하고 false인 경우 해당 요소를 배열에서 제외시켜 새로운 배열을 생성한다
+            
+            - 매개변수 => 매개변수 === 특정 변수 형태에서 매개변수 === 특정 변수는 return이 생략된 형태이다.
             ******************************/
             console.log('--------- filter ----------');
 
